<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="11dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/pswrdTv"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie2"
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="no_internet.json"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/msg"
        android:layout_below="@id/lottie2"
        android:layout_marginTop="-25dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginEnd="@dimen/padding_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_inter_msg"/>

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_below="@id/msg"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="@dimen/padding_10"
        android:layout_marginRight="@dimen/padding_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sure_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/open_settings" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@id/sure_button"
            android:layout_toLeftOf="@id/sure_button"
            android:textColor="@color/colorAccent"
            android:text="@string/cancel" />



    </RelativeLayout>

</RelativeLayout>